# FinSight

./: .gitignore  README.md
finance-advisor/: .env.example  Dockerfile  alembic.ini  backup.sql  docker-compose.yml  pyproject.toml
finance-advisor-ui/: .env.example  index.html  netlify.toml  package-lock.json  package.json  vite.config.js
finance-advisor-ui/src/: App.jsx  index.css  main.jsx
finance-advisor-ui/src/api/: advisor.js  auth.js  client.js  plaid.js  transactions.js  users.js
finance-advisor-ui/src/components/: AddTransactionModal.jsx  ChatInterface.jsx  Layout.jsx  SpendingChart.jsx  SummaryCards.jsx  TransactionTable.jsx
finance-advisor-ui/src/pages/: Advisor.jsx  Dashboard.jsx  Login.jsx  Profile.jsx  Register.jsx  Transactions.jsx
finance-advisor/alembic/: env.py
finance-advisor/alembic/versions/: 001_initial.py
finance-advisor/app/: config.py  database.py  dependencies.py  main.py
finance-advisor/app/models/: __init__.py  models.py
finance-advisor/app/routers/: __init__.py  advisor.py  auth.py  plaid.py  transactions.py  users.py
finance-advisor/app/schemas/: __init__.py  auth.py  plaid.py  transactions.py
finance-advisor/app/services/: __init__.py  ai_service.py  auth_service.py  demo_service.py  encryption.py  plaid_service.py  transaction_service.py
